--- a/main.ui
+++ b/main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>500</height>
+    <width>602</width>
+    <height>534</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>0</y>
+      <y>30</y>
       <width>600</width>
       <height>450</height>
      </rect>
@@ -31,7 +31,7 @@
     <property name="geometry">
      <rect>
       <x>480</x>
-      <y>460</y>
+      <y>490</y>
       <width>113</width>
       <height>41</height>
      </rect>
@@ -44,7 +44,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>460</y>
+      <y>490</y>
       <width>351</width>
       <height>31</height>
      </rect>
@@ -62,13 +62,26 @@
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>460</y>
+      <y>490</y>
       <width>113</width>
       <height>41</height>
      </rect>
     </property>
     <property name="text">
      <string>Сброс</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_addres">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>6</y>
+      <width>421</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
