--- a/main.ui
+++ b/main.ui
@@ -45,7 +45,7 @@
      <rect>
       <x>10</x>
       <y>490</y>
-      <width>351</width>
+      <width>231</width>
       <height>31</height>
      </rect>
     </property>
@@ -82,6 +82,19 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="post_code">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>490</y>
+      <width>113</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Индекс</string>
     </property>
    </widget>
   </widget>
